2008-06-11  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
        With help from Siraj Razick  <siraj.razick@collabora.co.uk>

        Reviewed by Simon.

        https://bugs.webkit.org/show_bug.cgi?id=19367
        [Qt] Plugins are drawn over the scrollbars

        * plugins/qt/PluginViewQt.cpp:
        (WebCore::PluginView::updateWindow): Call setMask on the
        QX11EmbedContainer to set the plugin clipping.

2008-06-12  Darin Adler  <darin@apple.com>

        - try to fix no-SVG build

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue): Added a case for
        CSSPropertyWebkitMask.

2008-06-12  Darin Adler  <darin@apple.com>

        - try to fix Windows build

        * dom/Element.idl: Turn off ElementTraversal functions when generating COM.
        Not sure why they're failing, but turning them off for now seems OK.

2008-06-12  Adam Barth  <abarth@webkit.org>

        Rubberstamped by Maciej.

        Roll 34504 back in.

        Test: http/tests/xmlhttprequest/access-control-basic-allow-access-control-origin-header-data-url.html

        * platform/SecurityOrigin.cpp:
        (WebCore::SecurityOrigin::toString):

2008-06-11  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        - fix <rdar://problem/5876370> Safari 3.1.1 bad rendering of pages from http://www.legifrance.gouv.fr/

        Tests: fast/parser/p-in-scope-strict.html
               fast/parser/p-in-scope.html

        * html/HTMLParagraphElement.h:
        (WebCore::HTMLParagraphElement::endTagRequirement): Changed to require
        an end tag. The explicit closing of one P element by another is now
        done in error checking, and therefore takes scope into account, allowing
        for <p><button><p>, for example.

        * html/HTMLParser.cpp:
        (WebCore::HTMLParser::HTMLParser): Initialize m_hasPElementInScope.